D.3.3/ Lancement des Batchs importCommuneSimpleInsee et importCommuneInseeHistory via l’IHM.

--- a/rade-webapp/src/main/resources/i18n/messages.properties
+++ b/rade-webapp/src/main/resources/i18n/messages.properties
@@ -132,7 +132,7 @@ batchresult.job=Paramètres du Job
 batchresult.exec=Résultat d'Execution
 batchresult.message=Message
 batchresult.button.back=Retour
-
+batchrequest.label.date=date de debut
 # Autres Pages
 # Page d'aide en ligne (aide.jsp)
 aide.title=Aide
